# early-bootanim-android-x86

./: .gitignore  Cargo.toml  README.md
patches/: initrd.img_init.patch  system-or-ramdisk_init.rc.patch
scripts/: flatten.py
src/: drawfb.rs  main.rs
